--- a/style.css
+++ b/style.css
@@ -11,11 +11,16 @@ a {
   text-decoration: none;
 }
 
+body {
+  height: 100vh;
+}
+
 button {
   background-color: #3882f6;
   border: none;
   border-radius: 4px;
   color: #f9faf8;
+  font-size: 18px;
   margin-top: 16px;
   padding: 8px 32px;
 }
@@ -40,6 +45,7 @@ a,
   font-size: 18px;
 }
 
+/* header section */
 .header {
   background-color: #1f2937;
   padding: 16px 256px 128px 256px;
@@ -69,4 +75,43 @@ a,
 .logo {
   color: #f9faf8;
   font-size: 24px;
+}
+
+/* info section */
+.info-section {
+  padding: 32px;
+}
+
+.info-header {
+  color: #1f2937;
+  font-size: 36px;
+  font-weight: 900;
+  margin-bottom: 48px;
+  text-align: center;
+}
+
+.box {
+  border: 4px solid #3882f6;
+  border-radius: 16px;
+  height: 200px;
+  width: 200px;
+}
+
+.box-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  text-align: center;
+  width: 200px;
+}
+
+.boxes {
+  display: flex;
+  gap: 48px;
+  justify-content: center;
+}
+
+.info-text {
+  color: #1f2937;
 }
