--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ a,
 
 /* info section */
 .info-section {
-  padding: 32px;
+  padding: 32px 0 128px 0;
 }
 
 .info-header {
@@ -114,4 +114,24 @@ a,
 
 .info-text {
   color: #1f2937;
+}
+
+/* quote section */
+.quote-section {
+  background-color: #e5e7eb;
+  padding: 128px 256px;
+}
+
+.quote-text {
+  color: #1f2937;
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 200;
+  text-align: center;
+}
+
+.quotee {
+  font-size: 18px;
+  font-weight: bold;
+  text-align: end;
 }
