--- a/style.css
+++ b/style.css
@@ -17,11 +17,9 @@ body {
 
 button {
   background-color: #3882f6;
-  border: none;
   border-radius: 4px;
   color: #f9faf8;
   font-size: 18px;
-  margin-top: 16px;
   padding: 8px 32px;
 }
 
@@ -49,6 +47,11 @@ a,
 .header {
   background-color: #1f2937;
   padding: 16px 256px 128px 256px;
+}
+
+.header-button {
+  border: none;
+  margin-top: 16px;
 }
 
 .hero-container {
@@ -79,6 +82,7 @@ a,
 
 /* info section */
 .info-section {
+  background-color: #f9faf8;
   padding: 32px 0 128px 0;
 }
 
@@ -134,4 +138,33 @@ a,
   font-size: 18px;
   font-weight: bold;
   text-align: end;
+}
+
+/* cta section */
+.cta-section {
+  background-color: #f9faf8;
+  color: #f9faf8;
+  padding: 64px 256px;
+}
+
+.cta-box {
+  align-items: center;
+  background-color: #3882f6;
+  border-radius: 8px;
+  display: flex;
+  padding: 48px 0;
+  justify-content: space-around;
+}
+
+.cta-button {
+  border: 2px solid #f9faf8;
+}
+
+.cta-title {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.cta-subtext {
+  color: #e5e7eb;
 }
