--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ a,
 .cta-section {
   background-color: #f9faf8;
   color: #f9faf8;
-  padding: 64px 256px;
+  padding: 100px 256px;
 }
 
 .cta-box {
@@ -167,4 +167,14 @@ a,
 
 .cta-subtext {
   color: #e5e7eb;
+}
+
+/* footer section */
+.footer {
+  align-items: center;
+  background-color: #1f2937;
+  color: #e5e7eb;
+  display: flex;
+  justify-content: center;
+  height: 100px;
 }
